# sFLARE

./: pyproject.toml
src/sFLARE/: __init__.py  core.py  data.py  edges.py  embeddings.py  enc_dec_impute.py  haystack_grid.py  hvg.py  losses.py  main.py  mnn.py  models.py  neighbors.py  priors.py  projection.py  propagate.py  train.py  utils.py
