[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sFLARE"
version = "0.1.0"
description = "Spatial Feature Learning for Anchored Reference-guided Embedding"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Qingnan Liang"}]

dependencies = [
  "numpy",
  "scipy",
  "tqdm",
]

[project.optional-dependencies]
rna = ["scanpy", "anndata", "pandas", "scikit-learn"]
torch = ["torch"]
geometric = ["torch-geometric"]
viz = ["matplotlib", "seaborn", "umap-learn", "adjustText"]
haystack = ["singleCellHaystack"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
